--- a/styles/animations.css
+++ b/styles/animations.css
@@ -13,8 +13,13 @@
     0% {
         transform: scale(1);
     }
-    100% {
+
+    60% {
         transform: scale(1.25);
+    }
+
+    100% {
+        transform: scale(1);
     }
 }
 
@@ -22,7 +27,10 @@
     0% {
         opacity: 0;
     }
-    100% {
+    80% {
         opacity: 1;
+    }
+    100% {
+        opacity: 0;
     }
 }
