--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,7 +1,7 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
     --font-main:'Inter-Variable', sans-serif;
-    --font-accent:'PressStart2P', cursive;
+    --font-accent:'PressStart2P', fantasy;
     --font-weight-height:400;
     --font-weight-normal:410;
     --font-weight-heading:715;
@@ -11,7 +11,6 @@
     --header-block-padding-vertical:clamp(122px, 119.18px + 0.75vw, 130px);
     --header-block-padding-horizontal:clamp(16px, -21.50px + 10.00vw, 122.5px);
     --border:2px solid rgba(0, 0, 0);
-    --borderr:2px solid rgba(0, 0, 0);
     --card-color:rgba(255, 255, 255);
     --card-text-width:clamp(351px, 236.56px + 30.52vw, 676px);
     --watermark-color:rgba(0,0,0);
@@ -29,14 +28,22 @@
     --animation-fill-color:rgba(255, 0, 0, 1);
 }
 
-@media (width > 376px) {
+@media (min-width: 376px) {
     :root {
        --footer-button-width: 335px;
        --footer-button-direction: row;
        --footer-button-picture-size:21px;
-       --dialog-width:353px;
+       --dialog-width:clamp(333px, 325.96px + 1.88vw, 353px);
        --button-ok-width:293px;
        --dialog-TextAndPicture-width:293px;
-       --borderr:0px solid rgba(0, 0, 0);
     }
+
+    .card-picture-part{
+        border-bottom: 0px solid rgba(0, 0, 0);
+    }
+
+    .dialog-text-and-picture {
+       padding: 29px 40px 0px 28px;
+    }
+
 }
