--- a/styles/variables.css
+++ b/styles/variables.css
@@ -26,6 +26,7 @@
     --background-color-button: white;
     --animation-fill-color-first:rgba(0, 0, 0, 1);
     --animation-fill-color:rgba(255, 0, 0, 1);
+    --picture-height:clamp(375px, 260.56px + 30.52vw, 700px);
 }
 
 @media (min-width: 376px) {
@@ -38,12 +39,18 @@
        --dialog-TextAndPicture-width:293px;
     }
 
-    .card-picture-part{
-        border-bottom: 0px solid rgba(0, 0, 0);
+    .page {
+        gap:98px;
     }
-
     .dialog-text-and-picture {
        padding: 29px 40px 0px 28px;
+    }
+    .main {
+        gap: 50px;
+    }
+
+    .card-botton-part{
+        margin-bottom: 26px;
     }
 
 }
